# learn-cmake

./: .gitignore  .gitmodules  README.md
basic/: CMakeLists.txt  main.c
optionalLibrary/: CMakeLists.txt  config.sh  config_noSimpleMathLibrary.sh  main.c  optionalLibraryConfig.h.in  run.sh
optionalLibrary/myLibrary/: simpleMath.h
staticLibrary/myApp/: main.c
staticLibrary/myLibrary/: simpleMath.c
staticLibraryAndsubmoduleWithCMake/: CMakeLists.txt  build.sh  config.sh  main.cpp  run.sh
staticLibraryAndsubmoduleWithCMake/myApp/: CMakeLists.txt  main.cpp
staticLibraryAndsubmoduleWithCMake/myLibrary/: CMakeLists.txt  addition.cpp  addition.h
submodule/: build.sh  configure.sh  run.sh
submodule/myApp/: CMakeLists.txt  main.c
versionCode/: CMakeLists.txt  main.c  run.sh  versionCodeConfig.h.in
versionCode/myLibrary/: CMakeLists.txt
